Thu Sep 09 10:52:51 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/bcp.c src/dblib/unittests/bcp.c:
	* src/dblib/unittests/common.c src/dblib/unittests/common.h:
	* src/dblib/unittests/dbmorecmds.c src/dblib/unittests/rpc.c:
	* src/dblib/unittests/t0001.c src/dblib/unittests/t0002.c:
	* src/dblib/unittests/t0003.c src/dblib/unittests/t0004.c:
	* src/dblib/unittests/t0005.c src/dblib/unittests/t0006.c:
	* src/dblib/unittests/t0007.c src/dblib/unittests/t0008.c:
	* src/dblib/unittests/t0009.c src/dblib/unittests/t0010.c:
	* src/dblib/unittests/t0011.c src/dblib/unittests/t0012.c:
	* src/dblib/unittests/t0013.c src/dblib/unittests/t0014.c:
	* src/dblib/unittests/t0015.c src/dblib/unittests/t0016.c:
	* src/dblib/unittests/t0017.c src/dblib/unittests/t0018.c:
	* src/dblib/unittests/t0020.c src/dblib/unittests/t0022.c:
	* src/dblib/unittests/t0023.c src/tds/mem.c:
	- fix some memory leaks (mainly bcp code and tests)

Wed Sep 08 17:10:27 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/convert.c src/tds/unittests/convert.c:
	- remove memory leak
	- fix conversion from binary to fixed types

Wed Sep 08 14:48:37 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/ctlib.h src/ctlib/blk.c src/ctlib/cs.c:
	* src/ctlib/ct.c src/ctlib/unittests/blk_in.c:
	* src/ctlib/unittests/blk_out.c src/ctlib/unittests/cs_config.c:
	* src/ctlib/unittests/ct_diagserver.c:
	* src/ctlib/unittests/ct_options.c:
	* src/ctlib/unittests/get_send_data.c src/tds/mem.c:
	* src/tds/unittests/common.c:
	- remove memory leaks in ct and tests

Fri Sep 03 16:21:34 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/odbc_util.c:
	- check type in SQLBindParameter
	- add some comments
	- support for SQL_TIMESTAMP (ODBC 2.x) setting sql type (required
	  for no-dm or DM 2.x compliant)
	* src/odbc/odbc_checks.c: fix typo
	* src/odbc/unittests/genparams.c src/odbc/unittests/putdata.c:
	- reuse common macro and code